# u32BitPtr

./: .gitignore  CMakeLists.txt  README.MD  main.cpp  new_tests.hh  new_u32_bit_ptr.cpp  new_u32_bit_ptr.hh  tests.hh  u32_bit_ptr.cpp  u32_bit_ptr.hh  utils.hh
src/: CMakeLists.txt  new_u32_bit_ptr.cpp  new_u32_bit_ptr.hh  u32_bit_ptr.cpp  u32_bit_ptr.hh
tests/: CMakeLists.txt  new_tests.cpp  new_tests.hh  tests.cpp  tests.hh
